@@ -40,6 +40,9 @@ Version 6.7 - not yet released
   - support IOIO via OpenAccessory (Android 4.x)
   - support USB host mode and USB-RS232 adapters on the Nook (#2886)
   - show Bluetooth name instead of MAC address in device list
+* Analysis
+  - a retrospective task is compiled that summarises waypoints the aircraft has 
+    visited (within 15km radius).  These waypoints are drawn on OLC page of analysis dialog.
 
 Version 6.6.3 - not yet released
 * map
